# Robotics-Project

./: config.sh  wsconfig.sh
.backup/mrob_highlevel_controller/config/: params.yaml
.backup/mrob_highlevel_controller/include/mrob_highlevel_controller/: HighlevelController.hpp
.backup/robotics_course/mrob_gazebo/launch/: mrob_gazebo.launch
mrob_highlevel_controller/: CMakeLists.txt  package.xml
mrob_highlevel_controller/config/: params.yaml
mrob_highlevel_controller/include/mrob_highlevel_controller/: HighlevelController.hpp
mrob_highlevel_controller/launch/: mrob_highlevel_controller.launch
mrob_highlevel_controller/rviz/: config.rviz
mrob_highlevel_controller/src/: HighlevelController.cpp
mrob_targeting/: CMakeLists.txt  package.xml
mrob_targeting/aruco/models/4x4_1000-0/: model.config  model.sdf
mrob_targeting/include/mrob_targeting/: Follower.hpp  Leader.hpp
mrob_targeting/launch/: gazebo.launch  main.launch  single_robot.launch  test_follower.launch
mrob_targeting/src/: Follower.cpp  Leader.cpp  follower_node.cpp  leader_node.cpp
mrob_targeting/worlds/: aruco.world
