<?xml version="1.0"?>
<package format="2">
  <name>mrob_highlevel_controller</name>
  <version>0.0.2</version>
  <description>The mrob_highlevel_controller package</description>
  <license>None</license>
  <author>Pierre Desbruns</author>
  <maintainer email="pierre.desbruns@esirem.fr">Carlos Mateo-Agullo</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
